Revision history for Perl extension Starch-Plugin-Net-Statsd.

{{$NEXT}}

 - Migrate build tooling from Dist::Zilla to Minilla.

0.02 2018-05-17

 - Stop hiding packages from indexing.
 - Make sure we set Carp::Internal during set/get/remove.

0.01 2015-08-03

 - First version.
