@@ -1,12 +1,10 @@
-requires 'Starch'           => 0.01;
-requires 'Net::Statsd'      => 0.11;
-requires 'strictures'       => 2.000000;
-requires 'namespace::clean' => 0.24;
-requires 'Moo'              => 2.000000;
-requires 'Type::Tiny'       => 1.000005;
+requires 'Starch'           => '0.10';
+requires 'Net::Statsd'      => '0.11';
+requires 'strictures'       => '2.000000';
+requires 'namespace::clean' => '0.24';
+requires 'Moo'              => '2.000000';
+requires 'Type::Tiny'       => '1.000005';
 
 on test => sub {
-   requires 'Test::Simple'   => 0.96;
-   requires 'Test::Fatal'    => 0;
-   requires 'Package::Stash' => 0.37;
+    requires 'Test2::V0' => '0.000094';
 };
