@@ -3,6 +3,8 @@ Revision history for Perl extension Starch-Plugin-Net-Statsd.
 {{$NEXT}}
 
  - Migrate build tooling from Dist::Zilla to Minilla.
+ - Migrate all the tests from Test::More to Test2::V0.
+ - Remove test dependency on Package::Stash.
 
 0.02 2018-05-17
 
